updating repository with PersonController and PersonSpecification
