# src/Controller/Person/PersonController.php
@@ -13,7 +13,6 @@ use Psr\Http\Message\ServerRequestInterface as Request;
 use Slim\Http\Response;
 use TDW\ACiencia\Controller\ElementBaseController;
 use TDW\ACiencia\Entity\Person;
-use TDW\ACiencia\Utility\Error;
 
 /**
  * Class PersonController
@@ -32,8 +31,7 @@ class PersonController extends ElementBaseController
      */
     public function cget(Request $request, Response $response): Response
     {
-        // @TODO
-        return Error::error($response, 501);
+        return $this->getAllElements($request,$response,Person::class,'persons');
     }
 
     /**
@@ -47,8 +45,7 @@ class PersonController extends ElementBaseController
      */
     public function get(Request $request, Response $response, array $args): Response
     {
-        // @TODO
-        return Error::error($response, 501);
+        return $this->getElementById($request,$response,Person::class,$args['personId']);
     }
 
     /**
@@ -61,8 +58,7 @@ class PersonController extends ElementBaseController
      */
     public function getPersonname(Request $request, Response $response, array $args): Response
     {
-        // @TODO
-        return Error::error($response, 501);
+        return $this->getElementByName($response,Person::class,$args['personname']);
     }
 
     /**
@@ -75,8 +71,7 @@ class PersonController extends ElementBaseController
      */
     public function delete(Request $request, Response $response, array $args): Response
     {
-        // @TODO
-        return Error::error($response, 501);
+        return $this->opDelete($request,$response,Person::class,$args['personId']);
     }
 
     /**
@@ -88,8 +83,7 @@ class PersonController extends ElementBaseController
      */
     public function post(Request $request, Response $response): Response
     {
-        // @TODO
-        return Error::error($response, 501);
+        return $this->opPost($request,$response,Person::class);
     }
 
     /**
@@ -102,7 +96,7 @@ class PersonController extends ElementBaseController
      */
     public function put(Request $request, Response $response, array $args): Response
     {
-        // @TODO
-        return Error::error($response, 501);
+        $args['id'] = $args['personId'];
+        return $this->opPut($request,$response,$args,Person::class);
     }
 }
